# django-suspense

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml
config/: settings.py  tests.py  urls.py
example/: README.md  example.db.json  requirements.txt
example/example/: settings.py  urls.py
example/posts/: models.py  urls.py  views.py
example/posts/migrations/: 0001_initial.py
example/posts/templates/: base.html
example/posts/templates/posts/: all.html  post.html
suspense/: apps.py  futures.py  http.py  shortcuts.py  streaming_render.py  urls.py  views.py
suspense/templates/suspense/: loader.html  replacer.html
suspense/templatetags/: suspense.py
tests/: test_futures.py  test_http.py  test_shortcuts.py  test_streaming_render.py  test_suspense.py  test_views.py
tests/templates/: test_suspense.html  test_suspense_shared.html
