[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-suspense"
dynamic = ["version"]
authors = [
  { name="paqstd-dev" },
]
description = "Display a fallback in templates until its children have finished loading."
readme = "README.md"
license = "MIT"
license-files = ["LICENCE"]
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
"Homepage" = "https://github.com/paqstd-dev/django-suspense"
"Bug Tracker" = "https://github.com/paqstd-dev/django-suspense/issues"

[dependency-groups]
dev = [
    "django>=4.2,<5; python_version < '3.10'",
    "django>=5.2; python_version >= '3.10'",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-django>=4.9",
    "pre-commit>=4.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["suspense"]

[tool.hatch.build.targets.sdist]
include = [
    "/suspense",
    "/tests",
    "/config",
    "/manage.py",
    "/README.md",
    "/LICENCE",
]

[tool.coverage.run]
omit = [
    "manage.py",
    "tests/*",
]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["example"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["suspense", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.tests"
asyncio_default_fixture_loop_scope = "function"
